pxc/tests/test_001_px/constmet5.px
import common -;

public namespace constmet5;

threaded struct foo {
  public int x;
  public function int n(int y) {
    int oldx = x;
    x = y;
    return oldx;
  }
}

{
  cptr{foo} v = make_cptr(foo(10));
  println(v->n(20)); // error
}
